overflow correction for mobile

--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,8 @@
     text-decoration: none;
     background: transparent;
     font-family: 'Fira Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* overflow: hidden; */
+    /* overflow: hidden;
+    overflow-y: visible; */
 }
 
 body{
